--- a/src/main/resources/fxml/admin-view.fxml
+++ b/src/main/resources/fxml/admin-view.fxml
@@ -1,33 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.collections.FXCollections?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import java.lang.String?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" id="AnchorPane" prefHeight="700.0" prefWidth="1366.0"
-            style="-fx-background-color: #00BCD4;" xmlns="http://javafx.com/javafx/11.0.14-internal"
-            fx:controller="bookings.controllers.AdminPageController">
+<?import javafx.collections.FXCollections?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.GridPane?>
+
+<AnchorPane id="AnchorPane" prefHeight="700.0" prefWidth="1366.0" style="-fx-background-color: #00BCD4;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookings.controllers.AdminPageController">
 
 
-    <Label fx:id="usernameL" layoutX="664.0" layoutY="122.0" text="Label"/>
-    <VBox layoutX="633.0" layoutY="250.0" prefHeight="200.0" prefWidth="100.0">
-        <HBox prefHeight="100.0" prefWidth="200.0"/>
-    </VBox>
-    <Label layoutX="147.0" layoutY="238.0" text="Check IN"/>
-    <Label layoutX="384.0" layoutY="238.0" text="Check Out"/>
-    <DatePicker layoutX="78.0" layoutY="277.0"/>
-    <DatePicker layoutX="325.0" layoutY="277.0"/>
-    <ComboBox layoutX="572.0" layoutY="277.0" prefWidth="123.0" GridPane.columnIndex="1"
-              GridPane.rowIndex="3">
+    <Label fx:id="usernameL" layoutX="664.0" layoutY="122.0" text="Label" />
+    <Label layoutX="147.0" layoutY="238.0" text="Check IN" />
+    <Label layoutX="384.0" layoutY="238.0" text="Check Out" />
+    <DatePicker layoutX="78.0" layoutY="277.0" />
+    <DatePicker layoutX="325.0" layoutY="277.0" />
+    <ComboBox layoutX="572.0" layoutY="277.0" prefWidth="123.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
 
         <items>
             <FXCollections fx:factory="observableArrayList">
-                <String fx:value="Single"/>
-                <String fx:value="Double"/>
-                <String fx:value="Twin"/>
+                <String fx:value="Single" />
+                <String fx:value="Double" />
+                <String fx:value="Twin" />
             </FXCollections>
         </items>
 
     </ComboBox>
-    <Label layoutX="595.0" layoutY="238.0" text="RoomType"/>
+    <Label layoutX="595.0" layoutY="238.0" text="RoomType" />
+   <TableView fx:id="roomsTableView" layoutX="315.0" layoutY="315.0" prefHeight="200.0" prefWidth="194.0">
+     <columns>
+       <TableColumn fx:id="roomsIdTV" prefWidth="92.00006103515625" text="roomsID" />
+       <TableColumn fx:id="categoryTV" prefWidth="99.99993896484375" text="category" />
+     </columns>
+   </TableView>
 </AnchorPane>
