--- a/src/main/resources/fxml/login-view.fxml
+++ b/src/main/resources/fxml/login-view.fxml
@@ -1,30 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER" prefHeight="275.0" prefWidth="411.0"
-      spacing="20.0" xmlns="http://javafx.com/javafx/11.0.14-internal"
-      fx:controller="bookings.controllers.LoginController">
+<?import javafx.scene.layout.*?>
+
+<VBox alignment="CENTER" prefHeight="400.0" prefWidth="320.0" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookings.controllers.LoginController">
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
 
-    <Label fx:id="msg" text="Log In"/>
-    <HBox alignment="CENTER" prefHeight="0.0" prefWidth="200.0">
+    <Label fx:id="msg" text="Log In" />
+    <HBox alignment="CENTER" prefHeight="0.0" prefWidth="0.0">
         <RadioButton mnemonicParsing="false" onAction="#radioButtonClicked" selected="true" text="Customer">
             <toggleGroup>
-                <ToggleGroup fx:id="isAdmin"/>
+                <ToggleGroup fx:id="isAdmin" />
             </toggleGroup>
         </RadioButton>
-        <RadioButton fx:id="isAdminRB" mnemonicParsing="false" onAction="#radioButtonClicked" text="admin"
-                     toggleGroup="$isAdmin"/>
+        <RadioButton fx:id="isAdminRB" mnemonicParsing="false" onAction="#radioButtonClicked" text="admin" toggleGroup="$isAdmin" />
     </HBox>
-    <TextField fx:id="usernameTF" promptText="username"/>
-    <TextField fx:id="passwordTF" promptText="password"/>
-    <HBox prefHeight="100.0" prefWidth="200.0">
-        <Hyperlink fx:id="registerHL" alignment="TOP_LEFT" text="Register"/>
-    </HBox>
-    <Button mnemonicParsing="false" onAction="#onLoginBtnClicked" text="Log In"/>
+    <TextField fx:id="usernameTF" promptText="username" />
+    <TextField fx:id="passwordTF" promptText="password" />
+   <HBox prefHeight="0.0" prefWidth="0.0">
+      <children>
+           <Hyperlink fx:id="registerHL" alignment="TOP_LEFT" maxHeight="33.0" maxWidth="128.0" minHeight="33.0" minWidth="128.0" prefHeight="33.0" prefWidth="128.0" text="Forgot Password" />
+         <Pane maxHeight="0.0" minHeight="0.0" prefHeight="0.0" prefWidth="9999.0" />
+   
+          <Button maxHeight="35.0" maxWidth="71.0" minHeight="35.0" minWidth="71.0" mnemonicParsing="false" onAction="#onLoginBtnClicked" prefHeight="35.0" prefWidth="71.0" text="Sign in" />
+      </children>
+   </HBox>
+   <HBox alignment="CENTER" prefHeight="0.0" prefWidth="0.0" spacing="10.0">
+      <children>
+         <Separator prefWidth="200.0" />
+         <Label maxHeight="25.0" maxWidth="18.0" minHeight="25.0" minWidth="18.0" prefHeight="25.0" prefWidth="18.0" text="Or" />
+         <Separator prefWidth="200.0" />
+      </children>
+   </HBox>
+   <Button mnemonicParsing="false" text="Sign up" />
 </VBox>
