--- a/src/main/resources/fxml/launcher-view.fxml
+++ b/src/main/resources/fxml/launcher-view.fxml
@@ -2,8 +2,20 @@
 
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/11.0.14-internal" fx:controller="bookings.controllers.LauncherController">
-    <ProgressBar fx:id="progressBar" layoutX="200.0" layoutY="307.0" prefWidth="200.0" styleClass="JMetroStyleClass"
-                 stylesheets="@../css/launcher-view.css"/>
+
+<AnchorPane
+        xmlns:fx="http://javafx.com/fxml/1"
+        xmlns="http://javafx.com/javafx/17.0.2-ea"
+        fx:controller="bookings.controllers.LauncherController"
+        stylesheets="@../css/launcher-view.css"
+
+        prefHeight="400.0"
+        prefWidth="600.0">
+
+    <ProgressBar
+            fx:id="progressBar"
+            layoutX="200.0"
+            layoutY="307.0"
+            prefWidth="200.0"/>
+
 </AnchorPane>
