--- a/src/main/resources/fxml/main-view.fxml
+++ b/src/main/resources/fxml/main-view.fxml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.BorderPane?>
-<BorderPane
-        xmlns:fx="http://javafx.com/fxml/1"
-        prefHeight="768"
-        prefWidth="1366"
-        xmlns="http://javafx.com/javafx/17.0.2-ea"
-        fx:controller="bookings.controllers.MainController">
-
-
+<?import javafx.scene.layout.VBox?>
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="768" prefWidth="1366"
+            xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="bookings.controllers.MainController">
+    <left>
+        <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="200.0" BorderPane.alignment="CENTER">
+            <Button mnemonicParsing="false" onAction="#onHomeClicked" text="Home"/>
+            <Button mnemonicParsing="false" onAction="#onRoomsClicked" text="Rooms"/>
+            <Button mnemonicParsing="false" onAction="#onBooksClicked" text="Books"/>
+            <Button layoutX="28.0" layoutY="612.0" mnemonicParsing="false" onAction="#onCalendarClicked"
+                    text="Calendar"/>
+        </VBox>
+    </left>
 </BorderPane>
