--- a/src/main/resources/fxml/main-view.fxml
+++ b/src/main/resources/fxml/main-view.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="768" prefWidth="1366"
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="mainPane" prefHeight="768" prefWidth="1366"
             xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="bookings.controllers.MainController">
     <left>
         <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="200.0" BorderPane.alignment="CENTER">
