--- a/src/main/resources/fxml/login/launcher-view.fxml
+++ b/src/main/resources/fxml/login/launcher-view.fxml
@@ -6,7 +6,7 @@
         xmlns:fx="http://javafx.com/fxml/1"
         xmlns="http://javafx.com/javafx/17.0.2-ea"
         fx:controller="bookings.controllers.LauncherController"
-        stylesheets="@../css/launcher-view.css"
+        stylesheets="@../../css/launcher-view.css"
 
         prefHeight="400.0"
         prefWidth="600.0">
