--- a/src/main/resources/fxml/books/book-edit.fxml
+++ b/src/main/resources/fxml/books/book-edit.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookings.controllers.BookEditController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookings.controllers.books.BookEditController">
    <children>
       <Label fx:id="msg" layoutX="281.0" layoutY="188.0" text="Label" />
       <Button layoutX="265.0" layoutY="241.0" mnemonicParsing="false" onAction="#onDeleteClicked" text="Delete" />
