--- a/src/main/resources/fxml/calendar/calendar-view.fxml
+++ b/src/main/resources/fxml/calendar/calendar-view.fxml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="bookings.controllers.CalendarController">
+
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookings.controllers.calendar.CalendarController">
     <center>
         <VBox alignment="CENTER" prefHeight="9999999.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-            <Button layoutX="265.0" layoutY="369.0" mnemonicParsing="false" onAction="#onSearchClicked" text="Search"/>
-            <TableView fx:id="calendarTV" layoutX="-2.0" layoutY="100.0" prefHeight="9.999999999E9"
-                       prefWidth="9.999999999E9"/>
+         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+            <children>
+               <Button mnemonicParsing="false" onAction="#onPrevMonthClk" text="prev month" />
+                  <Button mnemonicParsing="false" onAction="#onSearchClicked" text="Search" />
+               <Button mnemonicParsing="false" onAction="#onNextMonthClk" text="next month" />
+            </children>
+         </HBox>
+            <TableView fx:id="calendarTV" layoutX="-2.0" layoutY="100.0" prefHeight="9.999999999E9" prefWidth="9.999999999E9" />
         </VBox>
     </center>
     <top>
         <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-            <DatePicker fx:id="fromDP" promptText="from"/>
-            <DatePicker fx:id="toDP" promptText="to"/>
+            <DatePicker fx:id="fromDP" promptText="from" />
+            <DatePicker fx:id="toDP" promptText="to" />
         </HBox>
     </top>
 </BorderPane>
