--- a/src/main/resources/fxml/login/launcher-view.fxml
+++ b/src/main/resources/fxml/login/launcher-view.fxml
@@ -5,7 +5,7 @@
 <AnchorPane
         xmlns:fx="http://javafx.com/fxml/1"
         xmlns="http://javafx.com/javafx/17.0.2-ea"
-        fx:controller="bookings.controllers.LauncherController"
+        fx:controller="bookings.controllers.login.LauncherController"
         stylesheets="@../../css/launcher-view.css"
 
         prefHeight="400.0"
