--- a/src/main/resources/fxml/login/login-view.fxml
+++ b/src/main/resources/fxml/login/login-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER" prefHeight="400.0" prefWidth="320.0" spacing="20.0"
-      xmlns="http://javafx.com/javafx/" fx:controller="bookings.controllers.LoginController">
+      xmlns="http://javafx.com/javafx/" fx:controller="bookings.controllers.login.LoginController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
