--- a/src/main/resources/fxml/rooms/rooms-view.fxml
+++ b/src/main/resources/fxml/rooms/rooms-view.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="bookings.controllers.RoomsController">
+            xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="bookings.controllers.rooms.RoomsController">
 
     <TableView fx:id="roomsTV" layoutX="131.0" layoutY="100.0" prefHeight="200.0" prefWidth="338.0">
         <columns>
