--- a/src/main/resources/fxml/dashboard/form-view.fxml
+++ b/src/main/resources/fxml/dashboard/form-view.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.collections.*?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import java.lang.*?>
 <BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookings.controllers.dashboard.FormController">
     <center>
         <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
@@ -44,7 +44,7 @@
          <TextField fx:id="vccTF" promptText="card VCC" />
          <TextField fx:id="priceTF" promptText="price" />
          <Button mnemonicParsing="false" onAction="#onSubmitClicked" text="Submit" />
-         <Label fx:id="totalPrice" text="AAAAAAA" />
+            <Label fx:id="totalPriceF" text="AAAAAAA"/>
         </VBox>
     </center>
 </BorderPane>
