--- a/src/main/resources/fxml/books/book-Item.fxml
+++ b/src/main/resources/fxml/books/book-Item.fxml
@@ -3,12 +3,20 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
-<HBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="0.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea"
-      fx:controller="bookings.controllers.books.BookItemController">
+<HBox xmlns:fx="http://javafx.com/fxml/1"
+      prefHeight="0.0"
+      prefWidth="600.0"
+      xmlns="http://javafx.com/javafx/17.0.2-ea"
+      fx:controller="bookings.controllers.books.BookItem">
 
     <children>
-        <TextField fx:id="bookId" prefHeight="35.0" prefWidth="89.0"/>
-        <Button mnemonicParsing="false" onAction="#onEditClicked" text="edit"/>
+        <TextField fx:id="bookId"
+                   prefHeight="35.0"
+                   prefWidth="89.0"
+                   style="-fx-background-radius: 10 0 0 0;"/>
+        <Button mnemonicParsing="false"
+                onAction="#onEditClicked"
+                text="edit"/>
     </children>
 
 
