--- a/src/main/resources/fxml/calendar/calendar-view.fxml
+++ b/src/main/resources/fxml/calendar/calendar-view.fxml
@@ -2,18 +2,36 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookings.controllers.calendar.CalendarController">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1"
+            prefHeight="400.0"
+            prefWidth="600.0"
+            xmlns="http://javafx.com/javafx/17.0.2-ea"
+            fx:controller="bookings.controllers.calendar.CalendarView">
     <center>
-        <VBox alignment="CENTER" prefHeight="9999999.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-            <children>
-               <Button mnemonicParsing="false" onAction="#onPrevMonthClk" text="prev month" />
-                  <Button mnemonicParsing="false" onAction="#onSearchClicked" text="Search" />
-               <Button mnemonicParsing="false" onAction="#onNextMonthClk" text="next month" />
-            </children>
-         </HBox>
-            <TableView fx:id="calendarTV" layoutX="-2.0" layoutY="100.0" prefHeight="9.999999999E9" prefWidth="9.999999999E9" />
+        <VBox alignment="CENTER"
+              prefHeight="9999999.0"
+              prefWidth="100.0"
+              BorderPane.alignment="CENTER">
+            <HBox alignment="CENTER"
+                  prefHeight="100.0"
+                  prefWidth="200.0">
+                <children>
+                    <Button mnemonicParsing="false"
+                            onAction="#onPrevMonthClk"
+                            text="prev month"/>
+                    <Button mnemonicParsing="false"
+                            onAction="#onSearchClicked"
+                            text="Search"/>
+                    <Button mnemonicParsing="false"
+                            onAction="#onNextMonthClk"
+                            text="next month"/>
+                </children>
+            </HBox>
+            <TableView fx:id="calendarTV"
+                       layoutX="-2.0"
+                       layoutY="100.0"
+                       prefHeight="9.999999999E9"
+                       prefWidth="9.999999999E9"/>
         </VBox>
     </center>
     <top>
