--- a/src/main/resources/fxml/home/form-view.fxml
+++ b/src/main/resources/fxml/home/form-view.fxml
@@ -5,24 +5,43 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import java.lang.*?>
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookings.controllers.dashboard.FormController">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1"
+            prefHeight="400.0"
+            prefWidth="600.0"
+            xmlns="http://javafx.com/javafx/17.0.2-ea"
+            fx:controller="bookings.controllers.home.Form">
     <center>
-        <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-            <TextField fx:id="roomIdTF" promptText="roomID" />
-            <TextField fx:id="guestIdTF" promptText="guestID" />
-         <DatePicker fx:id="checkInDP" onAction="#checkInUpdated" promptText="checkin" />
-         <DatePicker fx:id="checkOutDP" onAction="#calcFinalPrice" promptText="checkout" />
-            <ChoiceBox fx:id="statusCB" prefWidth="150.0">
+        <VBox prefHeight="200.0"
+              prefWidth="100.0"
+              BorderPane.alignment="CENTER">
+            <TextField fx:id="roomIdTF"
+                       promptText="roomID"/>
+            <TextField fx:id="guestIdTF"
+                       promptText="guestID"/>
+            <DatePicker fx:id="checkInDP"
+                        onAction="#checkInUpdated"
+                        promptText="checkin"/>
+            <DatePicker fx:id="checkOutDP"
+                        onAction="#calcFinalPrice"
+                        promptText="checkout"/>
+            <ChoiceBox fx:id="statusCB"
+                       prefWidth="150.0">
                 <items>
                     <FXCollections fx:factory="observableArrayList">
-                        <String fx:value="Awaiting Pre-Payment" />
-                        <String fx:value="Booked" />
+                        <String fx:value="Awaiting Pre-Payment"/>
+                        <String fx:value="Booked"/>
                     </FXCollections>
                 </items>
             </ChoiceBox>
 
-         <CheckBox fx:id="prepaymentCB" mnemonicParsing="false" onAction="#calcFinalPrice" text="prepayment offer" />
-         <CheckBox fx:id="phoneChargeCB" mnemonicParsing="false" onAction="#calcFinalPrice" text="booking from phone(extra fee)" />
+            <CheckBox fx:id="prepaymentCB"
+                      mnemonicParsing="false"
+                      onAction="#calcFinalPrice"
+                      text="prepayment offer"/>
+            <CheckBox fx:id="phoneChargeCB"
+                      mnemonicParsing="false"
+                      onAction="#calcFinalPrice"
+                      text="booking from phone(extra fee)"/>
          <CheckBox fx:id="percentageCB" mnemonicParsing="false" onAction="#calcFinalPrice" text="plirotita kato tou 50" />
          <Label fx:id="percentage" />
          <Label text="\%plirotita" />
