--- a/src/main/resources/fxml/login/login-view.fxml
+++ b/src/main/resources/fxml/login/login-view.fxml
@@ -1,32 +1,173 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER" prefHeight="400.0" prefWidth="320.0" spacing="20.0"
-      xmlns="http://javafx.com/javafx/" fx:controller="bookings.controllers.login.LoginController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.text.*?>
+<?import java.net.URL?>
+<VBox xmlns:fx="http://javafx.com/fxml/1"
+      alignment="CENTER"
+      prefHeight="768"
+      prefWidth="1366"
+      style="-fx-background-color: #5100FC;"
+      xmlns="http://javafx.com/javafx/17.0.2-ea"
+      fx:controller="bookings.controllers.login.LoginView">
+   <stylesheets>
+      <URL value="@../../fonts/AtomicAge/atomic_age.css"/>
+      <URL value="@../login/login.css"/>
+   </stylesheets>
+   <children>
+      <StackPane>
+         <children>
+            <Text boundsType="VISUAL"
+                  fill="WHITE"
+                  opacity="0.15"
+                  style="-fx-font-family: 'Atomic Age'; -fx-font-size: 96;"
+                  text="HOTELINO"
+                  StackPane.alignment="CENTER">
+               <effect>
+                  <DropShadow height="5.32"
+                              offsetY="2.0"
+                              radius="2.1"
+                              spread="0.75"
+                              width="5.0">
+                     <color>
+                        <Color opacity="0.2"/>
+                     </color>
+                  </DropShadow>
+               </effect>
+               <StackPane.margin>
+                  <Insets top="100.0"/>
+               </StackPane.margin>
+            </Text>
+            <Text boundsType="VISUAL"
+                  fill="WHITE"
+                  layoutX="457.0"
+                  layoutY="81.0"
+                  opacity="0.2"
+                  style="-fx-font-family: 'Atomic Age'; -fx-font-size: 96;"
+                  text="HOTELINO">
+               <effect>
+                  <DropShadow height="5.32"
+                              offsetY="2.0"
+                              radius="2.1"
+                              spread="0.75"
+                              width="5.0">
+                     <color>
+                        <Color opacity="0.2"/>
+                     </color>
+                  </DropShadow>
+               </effect>
+               <StackPane.margin>
+                  <Insets top="50.0"/>
+               </StackPane.margin>
+            </Text>
+            <Text boundsType="VISUAL"
+                  fill="WHITE"
+                  layoutX="457.0"
+                  layoutY="81.0"
+                  style="-fx-font-family: 'Atomic Age'; -fx-font-size: 96;"
+                  text="HOTELINO">
+               <effect>
+                  <DropShadow height="5.32"
+                              offsetY="2.0"
+                              radius="2.1"
+                              spread="0.75"
+                              width="5.0">
+                     <color>
+                        <Color opacity="0.2"/>
+                     </color>
+                  </DropShadow>
+               </effect>
+            </Text>
+         </children>
+      </StackPane>
+      <VBox alignment="CENTER"
+            maxHeight="-Infinity"
+            maxWidth="-Infinity"
+            prefHeight="422.0"
+            prefWidth="482.0"
+            style="-fx-background-color: #FFFFFF; -fx-background-radius: 16;">
+         <children>
+            <Text boundsType="VISUAL"
+                  strokeType="OUTSIDE"
+                  strokeWidth="0.0"
+                  style="-fx-font-size: 40; -fx-font-weight: bold;"
+                  text="Σύνδεση"/>
+            <Pane>
+               <children>
+                  <Text boundsType="VISUAL"
+                        strokeType="OUTSIDE"
+                        strokeWidth="0.0"
+                        style="-fx-font-size: 20; -fx-font-weight: bold;"
+                        text="Όνομα Χρήστη"
+                        textOrigin="TOP"/>
+               </children>
+            </Pane>
+            <Region layoutX="60.0"
+                    layoutY="189.0"
+                    prefHeight="4.0"
+                    prefWidth="382.0"/>
+            <TextField fx:id="usernameTF"
+                       prefHeight="64.0"
+                       style="-fx-background-radius: 3;"
+                       styleClass="credentialsTF"/>
+            <Region prefHeight="12.0"
+                    prefWidth="382.0"/>
+            <Pane layoutX="60.0"
+                  layoutY="199.0">
+               <children>
+                  <Text boundsType="VISUAL"
+                        strokeType="OUTSIDE"
+                        strokeWidth="0.0"
+                        style="-fx-font-size: 20; -fx-font-weight: bold;"
+                        text="Κωδικός Πρόσβασης"
+                        textOrigin="TOP"/>
+               </children>
+            </Pane>
+            <Region layoutX="60.0"
+                    layoutY="123.0"
+                    prefHeight="4.0"
+                    prefWidth="382.0"/>
+            <PasswordField fx:id="passwordTF"
+                           layoutX="60.0"
+                           layoutY="219.0"
+                           prefHeight="64.0"
+                           style="-fx-background-radius: 3;"
+                           styleClass="credentialsTF"/>
+            <Pane layoutX="60.0"
+                  layoutY="241.0">
+               <children>
+                  <Hyperlink style="-fx-font-weight: bold; -fx-font-size: 15; -fx-text-fill: #000000;"
+                             text="Ξέχασα τον κωδικό"/>
+               </children>
+               <VBox.margin>
+                  <Insets left="8.0"/>
+               </VBox.margin>
+            </Pane>
+            <Region prefHeight="16.0"
+                    prefWidth="382.0"/>
+            <Button maxWidth="1.7976931348623157E308"
+                    mnemonicParsing="false"
+                    onAction="#onLoginBtnClicked"
+                    prefHeight="64.0"
+                    style="-fx-text-fill: #FFFFFF; -fx-background-radius: 32; -fx-font-size: 40; -fx-font-weight: bold; -fx-border-radius: 32; -fx-border-color: #000000; -fx-border-width: 1; -fx-padding: 0;"
+                    styleClass="signInBtn"
+                    text="Είσοδος"/>
+         </children>
+         <VBox.margin>
+            <Insets/>
+         </VBox.margin>
+         <padding>
+            <Insets left="50.0"
+                    right="50.0"/>
+         </padding>
+      </VBox>
+   </children>
 
-    <Label fx:id="msg" text="Log In"/>
-    <TextField fx:id="usernameTF" promptText="username"/>
-    <TextField fx:id="passwordTF" promptText="password"/>
-    <HBox prefHeight="0.0" prefWidth="0.0">
-        <Hyperlink fx:id="registerHL" alignment="TOP_LEFT" maxHeight="33.0" maxWidth="128.0" minHeight="33.0"
-                   minWidth="128.0" prefHeight="33.0" prefWidth="128.0" text="Forgot Password"/>
-        <Pane maxHeight="0.0" minHeight="0.0" prefHeight="0.0" prefWidth="9999.0"/>
-
-        <Button maxHeight="35.0" maxWidth="71.0" minHeight="35.0" minWidth="71.0" mnemonicParsing="false"
-                onAction="#onLoginBtnClicked" prefHeight="35.0" prefWidth="71.0" text="Sign in"/>
-    </HBox>
-    <HBox alignment="CENTER" prefHeight="0.0" prefWidth="0.0" spacing="10.0">
-        <Separator prefWidth="200.0"/>
-        <Label maxHeight="25.0" maxWidth="18.0" minHeight="25.0" minWidth="18.0" prefHeight="25.0" prefWidth="18.0"
-               text="Or"/>
-        <Separator prefWidth="200.0"/>
-    </HBox>
-    <Button mnemonicParsing="false" text="Sign up"/>
 </VBox>
