--- a/src/main/resources/fxml/main-view.fxml
+++ b/src/main/resources/fxml/main-view.fxml
@@ -1,18 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="mainPane" prefHeight="768" prefWidth="1366"
-            xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="bookings.controllers.MainController">
-    <left>
-        <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="80.0" BorderPane.alignment="CENTER">
-            <Button mnemonicParsing="false" onAction="#onDashboardClicked" text="Dashboard"/>
-            <Button mnemonicParsing="false" onAction="#onRoomsClicked" text="Rooms"/>
-            <Button mnemonicParsing="false" onAction="#onBooksClicked" text="Books"/>
-            <Button mnemonicParsing="false" onAction="#onCalendarClicked" text="Calendar"/>
-            <Button mnemonicParsing="false" onAction="#onGuestsClicked" text="Guests"/>
-            <Button mnemonicParsing="false" onAction="#onSysManClk" text="System Management"/>
-        </VBox>
-    </left>
-</BorderPane>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.text.Text?>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1"
+            prefHeight="768"
+            prefWidth="1366"
+            style="-fx-background-color: #5100FC;"
+            stylesheets="@main.css"
+            xmlns="http://javafx.com/javafx/17.0.2-ea"
+            fx:controller="bookings.controllers.MainView">
+
+
+    <Text boundsType="VISUAL"
+          fill="WHITE"
+          style="-fx-font-family: 'Atomic Age'; -fx-font-size: 96;"
+          text="HOTELINO"
+          AnchorPane.leftAnchor="45.0"
+          AnchorPane.topAnchor="75.0">
+        <effect>
+            <DropShadow height="5.32"
+                        offsetY="2.0"
+                        radius="2.1"
+                        spread="0.75"
+                        width="5.0">
+                <color>
+                    <Color opacity="0.2"/>
+                </color>
+            </DropShadow>
+        </effect>
+    </Text>
+    <BorderPane fx:id="mainPane"
+                layoutX="92.0"
+                layoutY="256.0"
+                style="-fx-background-color: #FFFFFF; -fx-background-radius: 16;"
+                AnchorPane.bottomAnchor="60.0"
+                AnchorPane.leftAnchor="140.0"
+                AnchorPane.rightAnchor="140.0"
+                AnchorPane.topAnchor="160.0"/>
+    <Button layoutX="14.0"
+            layoutY="411.0"
+            mnemonicParsing="false"
+            onAction="#navToHome"
+            prefHeight="41.0"
+            prefWidth="111.0"
+            style="-fx-padding: 0; -fx-font-size: 32; -fx-font-weight: bold; -fx-text-fill: #FFFFFF; -fx-background-radius: 6;"
+            styleClass="backBtn"
+            text="Back">
+        <padding>
+            <Insets left="20.0"/>
+        </padding>
+    </Button>
+
+</AnchorPane>
